Add worker tax number field
